[EFL][WK2] Minibrowser : Fix the 'Escape' button issue to exit fullscreen https://bugs.webkit.org/show_bug.cgi?id=136854

Patch by Rohit Kumar <kumar.rohit@samsung.com> on 2014-09-25
Reviewed by Gyuyoung Kim.

'Escape' key should exit fullscreen first and then should be used to stop page load.

* MiniBrowser/efl/main.c:
(on_key_down):

Canonical link: https://commits.webkit.org/154950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173997 268f45cc-cd09-0410-ab3c-d52691b4dbfc